# StringCalculator

./: CMakeLists.txt  Main.c  README.md  Str.c  Str.h  Utils.c  Utils.h
